--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "1.12.2",
+    "connect-mongo": "^0.8.0",
     "cookie-parser": "1.3.4",
     "dotenv": "1.1.0",
     "express": "4.12.3",
@@ -19,7 +20,8 @@
     "mongoose-findorcreate": "^0.1.2",
     "passport": "0.2.1",
     "passport-facebook": "^2.0.0",
-    "passport-instagram": "0.1.2"
+    "passport-instagram": "0.1.2",
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": "0.10.x"
